# adaptive-ai-orchestrator

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docs/: adaptive-routing-progress.md  adaptive-routing-v2.md  architecture.md  intra-vendor-tier-routing.md  paired-pilot-candidate-ledger.md  paired-pilot-preregistration.md  paired-smoke-tooling.md  project-constitution-api-first-archive.md  project-constitution.md  provisioned-reproduction.md  routing-claude-review.md  routing-evaluation-protocol.md  routing-research-review.md
experiments/: README.md  frameb-licenses-snapshot-2026-07-19.json  frameb-stage1-queries-2026-07-19.json  phase2a-smoke-v1.json  phase2a-smoke-v2.json  phase2b-agent-instruction-parity-2026-07-20.json  phase2b-candidate-ledger-v1.json  phase2b-exact-revision-license-2026-07-24.json  phase2b-license-file-classification-2026-07-24.json  phase2b-license-priority-2026-07-24.json  phase2b-license-probe-2026-07-19.json  phase2b-linked-solution-prefilter-2026-07-24.json  phase2b-mechanical-prefilter-2026-07-19.json  phase2b-provisioning-measurements-2026-07-19.json  phase2b-rank5-ledger-application-2026-07-24.json  phase2b-rank6-instruction-parity-2026-07-24.json  phase2b-rank6-ledger-application-2026-07-24.json  phase2b-rank7-agent-free-reproduction-2026-07-24.json  phase2b-rank7-ledger-application-2026-07-24.json  phase2b-rank7-semantic-prefilter-2026-07-24.json  phase2b-scope-review-exact-parity-ledger-application-2026-07-24.json  phase2b-scope-review-exact-revision-license-2026-07-24.json  phase2b-scope-review-instruction-parity-2026-07-24.json  phase2b-scope-review-ledger-application-2026-07-24.json  phase2b-scope-review-solution-segmentation-2026-07-24.json  phase2b-scope-review-source-semantic-2026-07-24.json  phase2b-scope-review-survivor-agent-free-reproduction-2026-07-24.json  phase2b-scope-review-survivor-ledger-application-2026-07-24.json  phase2b-scope-review-survivor-semantic-2026-07-24.json  phase2b-screening-cascade-2026-07-24.json  (+9 more)
(+106 files in other folders)
